BSE 0.22 - unreleased
========

Bug fixes:

 - the search index builder was ignoring configured field scores.

 - the customer is no longer asked to select a shipper and shipping is
   set to zero for orders where all products have zero weight.
   https://rt4.develop-help.com/Ticket/Display.html?id=1328

Enhancements:

 - automatic image insertion can now be disabled globally or on a
   per-article basis.
   https://rt4.develop-help.com/Ticket/Display.html?id=1331

Templates:

 - admin/order_detail.tmpl - the product tag now uses tag_article as
   it should.

 - admin/subscr/list - isubscription is now an object tag, giving
   access to the is_removable method
   https://rt4.develop-help.com/Ticket/Display.html?id=1323

 - admin/subscr/edit, admin/subscr/detail - subscription is now an
   object tag

BSE 0.21 - 07 Mar 2012
========

 - Squirrel::Template has largely been rewritten performing a parsing
   then a processing step rather than doing many, many s/// over the
   template text.

 - verbose output of generate.pl is now based on the template
   admin/generate.tmpl

 - add the referer tag to all dynamic pages

 - added [undeletable articles] to bse.cfg as a supplement to
   @NO_DELETE.  @NO_DELETE is now deprecated and may be removed in a
   future release of BSE.
   https://rt4.develop-help.com/Ticket/Display.html?id=1209

 - iterator inlines can now be filtered (Adrian Oldham)

 - added some more extension to content type mappings for video
   formats (Adrian Oldham)

 - the shopadmin order list targets are now much more efficient - they
   no longer load the entire order table, are paginated, and let the
   data do the selection of matching records.

   NOTE: this removes some backward compatibility - iterator filters
   no longer work and a new tag, all_order_count can be used to fetch
   order counts.  Extra search parameters have been provided to filter
   the results.

 - added a new adminurl2 tag where the second parameter is a target.
